Implemented payments and balance

--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -36,3 +36,6 @@ sk:
       date_month: '%-d. %B'
       date_month_year: '%-d. %B %Y'
       date_with_time: '%-d. %B %Y, %k:%M'
+  will_paginate:
+    next_label: '>'
+    previous_label: '<'
